--- a/shooting_gallery/assets/package.json
+++ b/shooting_gallery/assets/package.json
@@ -6,8 +6,13 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "jquery": "^3.3.1",
+    "konva": "^2.6.0",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-konva": "^16.8.2-0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
